--- a/style.css
+++ b/style.css
@@ -41,12 +41,10 @@ header {
 }
 
 
-
-
 /*main section*/
 
 #main-section {
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .gallery {
@@ -60,6 +58,7 @@ header {
 }
 
 .image-container {
+    position: relative;
     flex: 1;
     overflow: hidden;
     transition: flex 0.5s ease;
@@ -83,32 +82,85 @@ header {
     transform: scale(1.1);
 }
 
+.download-btn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.6); 
+    color: white; 
+    padding: 5px;
+    border-radius: 5px;
+    text-decoration: none; 
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+.download-btn:hover {
+    background-color: rgba(0, 0, 0, 0.8); 
+}
+
+.download-btn i {
+    font-size: 1.2rem;
+}
 
 
 #gallery-section {
-    margin-top: 30px;
+    margin-top: 120px;
 }
 
 .image-gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     margin-top: 20px;
 }
 
-.image-gallery img{
-    width: 300px;
-    height: 300px;
-    border-radius: 10px;
-    object-fit: cover;
+.image {
+    position: relative; 
+    overflow: hidden;
+    transition: flex 0.5s ease;
     cursor: pointer;
-    transition: transform 0.3s ease;
+    height: 350px;
+    transition: transform 0.5s ease;
+    border-radius: 5px;
 }
 
-.image-gallery img:hover {
+.image img {
+    width: 330px;
+    height: 330px; 
+    object-fit: cover; 
+}
+
+.image:hover {
     transform: scale(1.1);
 }
+
+.download-btn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px; 
+    background-color: rgba(0, 0, 0, 0.6); 
+    color: white; 
+    padding: 5px; 
+    border-radius: 5px; 
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+}
+
+.download-btn:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.download-btn i {
+    font-size: 1.2rem;
+}
+
 
 #upload-section {
     text-align: center;
@@ -133,8 +185,6 @@ header {
 .uploaded-image:hover {
     transform: scale(1.1);
 }
-
-
 
 h2 {
     color: #00ffff;
